examples/test/testpolicy17151.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17151
  namespace: namespace51
spec:
  podSelector:
    matchLabels:
      key49: value22
      key32: value30
      key34: value0
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key43: value37
          key23: value23
      podSelector:
        matchLabels:
          key10: value47
          key19: value26
